src/QTimer.h


// 
// This file has been automatically generated by RaQt_maker V0.0.6.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQTimerCtor(void * parent);
EXTERNC void * SCWQTimerCtor(void * parent);
EXTERNC void QWQTimersetInterval_1(void * obj, int32_t  msec);
EXTERNC void QWQTimerstart_2(void * obj);
EXTERNC void QWQTimerstop(void * obj);
EXTERNC void QWvalidateCB_QTimer(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQTimerDtor(void *);
EXTERNC void SCWQTimerDtor(void *);