lib/Qt/QtWidgets/QTimer.rakumod


# 
# This file has been automatically generated by RaQt_maker V0.0.6.
# To modify and regenerate it, see the source code available here: 
#         https://github.com/yguillemot/RaQt_maker
# 

use NativeCall;
use Qt::QtWidgets:ver<0.0.6>:auth<zef:yguillemot>:api<2>;
use Qt::QtWidgets::QtHelpers:ver<0.0.6>:auth<zef:yguillemot>:api<2>;
use Qt::QtWidgets::QtWrappers:ver<0.0.6>:auth<zef:yguillemot>:api<2>;
use Qt::QtWidgets::QObject:ver<0.0.6>:auth<zef:yguillemot>:api<2>;
use Qt::QtWidgets::QtBase:ver<0.0.6>:auth<zef:yguillemot>:api<2>;
use Qt::QtWidgets::RQTimer:ver<0.0.6>:auth<zef:yguillemot>:api<2>;



class QTimer:ver<0.0.6>:auth<zef:yguillemot>:api<2>
    is QObject
    is QtObject
    does RQTimer
    is export {

    multi sub ctor(QtBase $this, QObject $parent = (QObject)) {
        my $a1 = ?$parent ?? $parent.address !! QWInt2Pointer(0);
        $this.address = QWQTimerCtor($a1);
        $this.ownedByRaku = True;
    }

    multi sub subClassCtor(QtBase $this, QObject $parent = (QObject)) {
        my $a1 = ?$parent ?? $parent.address !! QWInt2Pointer(0);
        $this.address = SCWQTimerCtor($a1);
        $this.ownedByRaku = True;
    }

    method validateCB(Str $m) {
        QWvalidateCB_QTimer(self.address, self.id, $m);
    }

    multi sub ctor(QtBase $this, NativeCall::Types::Pointer $p, Bool :$obr = False) {
        # Get access to a preexisting Qt object
        $this.address = $p;
        $this.ownedByRaku = $obr;
    }

    multi sub ctor(|capture) {
        note "QtWidgets ", ::?CLASS.^name,
             " ctor called with unsupported args";
        die "Bad args";
    }

    submethod new(|capture) {
        my QTimer $rObj = self.bless;
        ctor($rObj, |capture);
        return $rObj;
    }

    multi sub subClassCtor(|capture) {
        note "QtWidgets subclass ", ::?CLASS.^name,
             " ctor called with unsupported args";
        die "Bad args";
    }

    submethod subClass(|capture) {
        subClassCtor(self, |capture);
        self.validateCallBacks();
    }

    submethod DESTROY {
        if self.ownedByRaku {
            QWQTimerDtor(self.address);
            self.ownedByRaku = False;
        }
    }

    multi method setInterval(Int $msec)
    {
        QWQTimersetInterval_1(self.address, $msec);
    }

    multi method start() is QtSlot
    {
        QWQTimerstart_2(self.address);
    }

    method stop() is QtSlot
    {
        QWQTimerstop(self.address);
    }

    method timeout()
        is QtPrivateSignal { ... }

}


sub QWQTimerCtor(Pointer)
    returns Pointer is native(&libwrapper) { * }

sub SCWQTimerCtor(Pointer)
    returns Pointer is native(&libwrapper) { * }

sub QWvalidateCB_QTimer(Pointer, int32, Str)
    is native(&libwrapper) { * }

sub QWQTimerDtor(Pointer)
    is native(&libwrapper) { * }

sub QWQTimersetInterval_1(Pointer, int32)
    is native(&libwrapper) { * }

sub QWQTimerstart_2(Pointer)
    is native(&libwrapper) { * }

sub QWQTimerstop(Pointer)
    is native(&libwrapper) { * }

